[gd_scene load_steps=14 format=3 uid="uid://dl3ob63ckvjq5"]

[ext_resource type="Script" uid="uid://c4edw2jhsjl73" path="res://Entities/zombie.gd" id="1_2votk"]
[ext_resource type="Texture2D" uid="uid://dp8nmqytlyhrd" path="res://Assets/Zombie.png" id="1_nj2pk"]
[ext_resource type="PackedScene" uid="uid://ceabu7h8g45hl" path="res://Components/health_bar.tscn" id="2_r0odx"]
[ext_resource type="PackedScene" uid="uid://bvhx82eau62u8" path="res://Components/health_system.tscn" id="2_rjxgx"]
[ext_resource type="PackedScene" uid="uid://cvhxcb8j5nxg7" path="res://Components/targeter.tscn" id="5_fqedw"]
[ext_resource type="PackedScene" uid="uid://gekeoi5mba2l" path="res://Components/observer.tscn" id="6_8qtrh"]
[ext_resource type="PackedScene" uid="uid://bivqglsx6xa3m" path="res://Components/line_of_sight.tscn" id="7_5p7nf"]
[ext_resource type="PackedScene" uid="uid://bhwn8uo4g627j" path="res://States/state_machine.tscn" id="8_ksr8e"]
[ext_resource type="PackedScene" uid="uid://dl2o8qjiic7t0" path="res://States/npc_idle.tscn" id="9_kq8yi"]
[ext_resource type="PackedScene" uid="uid://se3ob4ys2bx5" path="res://States/npc_targeting.tscn" id="12_i0c57"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2votk"]
size = Vector2(23, 40)

[sub_resource type="CircleShape2D" id="CircleShape2D_2votk"]
radius = 270.224

[sub_resource type="CircleShape2D" id="CircleShape2D_r0odx"]
radius = 729.098

[node name="Zombie" type="CharacterBody2D" node_paths=PackedStringArray("targeter") groups=["Zombies"]]
scale = Vector2(0.25, 0.25)
collision_mask = 7
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_2votk")
targeter = NodePath("Targeter")

[node name="HealthSystem" parent="." instance=ExtResource("2_rjxgx")]
maxHealth = 100

[node name="HealthBar" parent="." node_paths=PackedStringArray("healthSystem") instance=ExtResource("2_r0odx")]
offset_left = -13.0
offset_top = -29.0
offset_right = 12.0
offset_bottom = -24.0
healthSystem = NodePath("../HealthSystem")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, 1)
shape = SubResource("RectangleShape2D_2votk")

[node name="Pivot_Point" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Pivot_Point"]
texture = ExtResource("1_nj2pk")

[node name="Attack_Proximity" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_Proximity"]
shape = SubResource("RectangleShape2D_2votk")

[node name="Focus_Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Focus_Area"]
shape = SubResource("CircleShape2D_2votk")

[node name="Chase_Area" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chase_Area"]
shape = SubResource("CircleShape2D_r0odx")
debug_color = Color(0.90265, 0.294429, 0.243426, 0.42)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="Targeter" parent="." node_paths=PackedStringArray("parent", "observer") instance=ExtResource("5_fqedw")]
parent = NodePath("..")
observer = NodePath("../Observer")
trackedEntityGroups = Array[String](["Good Guys"])

[node name="Observer" parent="." node_paths=PackedStringArray("lineOfSight", "observationArea") instance=ExtResource("6_8qtrh")]
lineOfSight = NodePath("../LineOfSight")
observationArea = NodePath("../Focus_Area")

[node name="LineOfSight" parent="." node_paths=PackedStringArray("parent") instance=ExtResource("7_5p7nf")]
parent = NodePath("..")
blockingLayers = Array[int]([2, 3])

[node name="StateMachine" parent="." node_paths=PackedStringArray("initial_state") instance=ExtResource("8_ksr8e")]
initial_state = NodePath("NpcIdle")

[node name="NpcIdle" parent="StateMachine" node_paths=PackedStringArray("targeter", "parent", "navAgent") instance=ExtResource("9_kq8yi")]
targeter = NodePath("../../Targeter")
maxWaitTime = 10.0
parent = NodePath("../..")
navAgent = NodePath("../../NavigationAgent2D")

[node name="NpcTargeting" parent="StateMachine" node_paths=PackedStringArray("targeter") instance=ExtResource("12_i0c57")]
targeter = NodePath("../../Targeter")

[connection signal="healthChanged" from="HealthSystem" to="HealthBar" method="_on_health_system_health_changed"]
[connection signal="body_shape_entered" from="Attack_Proximity" to="." method="_on_attack_proximity_body_shape_entered"]
[connection signal="NewTargetAcquired" from="Targeter" to="." method="_on_targeter_new_target_acquired"]
[connection signal="TargetsLost" from="Targeter" to="." method="_on_targeter_targets_lost"]
